--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^5.9.2",
     "axios": "^1.5.0",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
