--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,14 @@
 {
+  "proxy": "http://localhost:8080/api/v1",
   "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.9.2",
     "axios": "^1.5.0",
     "cra-template": "1.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
